# my-inference

./: CMakeLists.txt  debug.md  readme.md
include/backend/: backend.h  device_type.h  isa_type.h
include/backend/isa_traits/: avx512_traits.h  cpu_traits.h
include/device/: device.h
include/expr/: expr.h  expr_op_type.h  expr_type.h
include/graph/: attribute_value.h  data_type.h  graph.h  graph_util.h  op_node.h  op_type.h  tensor_node.h  tensor_type.h
include/graph/attribute_propagate/: attr_propagate_util.h  attr_propagator.h  batch_norm_attr_propagator.h  conv_attr_propagator.h  gemm_attr_propagator.h  reduce_attr_propagator.h
include/graph/data_type_infer/: data_type_infer.h
include/graph/infer/: data_type_infer.h
include/graph/infer/shape_infer/: broadcast_shape_infer.h  conv_shape_infer.h  gemm_shape_infer.h  identity_shape_infer.h  shape_infer_util.h  stride.h
include/graph/node/: attribute_key.h  attribute_value.h  consumer_info.h  data_type.h  op_node.h  op_type.h  shape_util.h  tensor_dim.h  tensor_node.h
include/graph/node/attribute/: attribute_key.h  attribute_value.h  conv_layout.h
include/graph/shape_infer/: broadcast_shape_infer.h  conv_shape_infer.h  gemm_shape_infer.h  identity_shape_infer.h  reduce_shape_infer.h  shape_infer.h  shape_infer_util.h  stride.h
include/kernel/: device.h  kernel_creator.h  kernel_key.h  kernel_util.h  op_kernel.h  op_key.h
include/kernel/cpu/: batch_norm_kernel.h  clip_kernel.h  element_wise_kernel.h  elementwise_kernel.h  gemm_kernel.h  reduce_kernel.h
include/kernel/cpu/avx512/conv/: conv2D_base_kernel.h  depthwise_conv2D_kernel.h  standard_conv2D_kernel.h
include/kernel/cpu/avx512/elementwise/: binary_elementwise_kernel.h  elementwise_kernel_base.h  unary_elementwise_kernel.h
include/kernel/cpu/conv/: conv2D_base_kernel.h  depthwise_conv2D_kernel.h  grouped_conv2D_kernel.h  standard_conv2D_kernel.h
include/kernel/cpu/generic/: batch_norm_kernel.h  clip_kernel.h  elementwise_kernel.h  gemm_kernel.h  pad_kernel.h  reduce_kernel.h  slice_kernel.h  transpose_kernel.h
include/kernel/cpu/generic/conv/: conv2D_base_kernel.h  depthwise_conv2D_kernel.h  grouped_conv2D_kernel.h  standard_conv2D_kernel.h
include/kernel/cpu/generic/elementwise/: binary_elementwise_kernel.h  broadcast_binary_elementwise1D_kernel.h  broadcast_binary_elementwise2D_kernel.h  broadcast_binary_elementwiseND_kernel.h  broadcast_binary_elementwise_kernel_base.h  (+2 more)
include/kernel/kernel_args/: batch_norm_args.h  broadcast_binary_elementwise_args.h  conv2D_args.h  elementwise_args.h  pad_args.h  reduce_args.h  slice_args.h  transpose_args.h
include/kernel/kernel_creator/: element_wise_with_stride_kernel_creator.h  generic_kernel_creator.h  kernel_creator.h  kernel_creator_util.h
include/kernel/kernel_creator/cpu/: element_wise_with_stride_kernel_creator.h  elementwise_with_stride_kernel_creator.h
include/kernel/kernel_factory/: element_wise_with_stride_kernel_creator.h
include/kernel/kernel_key_generator/: clip_key_generator.h  conv_key_generator.h  element_wise_kernel_key_generator.h  elementwise_key_generator.h  gemm_key_generator.h  generic_kernel_key_generator.h  kernel_key_generator.h  kernel_key_util.h
include/kernel/primitive/cpu/: batch_norm.h  clip.h  element_wise.h  gemm.h  reduce.h
include/memory/: memory_info.h  memory_planning.h
include/memory/memory_allocator/: cpu_memory_allocator.h  memory_allocator.h  memory_allocator_util.h
include/memory/memory_allocator_creator/: generic_memory_allocator_creator.h  memory_allocator_creator.h
include/optimize/: common_subexpression_elimination.h  constant_folding.h  conv_layout_optimizer.h  dead_code_elimination.h  op_fusion.h  optimizer.h  optimizer_util.h  pass_type.h
include/optimize/constant_folder/: element_wise_folder.h  elementwise_folder.h  op_folder.h  op_folder_util.h
include/optimize/op_fusion/: conv_batchnorm_fuser.h  op_fuser.h  op_fusion_pattern.h
include/util/: factory.h  id_generator.h  math.h  memory_holder.h  onnx_util.h  op_sub_type.h  singleton.h  util.h
include/util/arithmetic_op_type/: binary_op_type.h  unary_op_type.h
onnx/: test_conv_bn_fuse.onnx  test_optimize.onnx
src/backend/: isa_type.cpp
src/graph/: data_type_infer.cpp  graph.cpp
src/graph/attribute_propagate/: attr_propagate_util.cpp  batch_norm_attr_propagator.cpp  conv_attr_propagator.cpp  gemm_attr_propagator.cpp  reduce_attr_propagator.cpp
src/graph/date_type_infer/: data_type_infer.cpp
src/graph/infer/: data_type_infer.cpp
src/graph/infer/shape_infer/: broadcast_shape_infer.cpp  conv_shape_infer.cpp  gemm_shape_infer.cpp  identity_shape_infer.cpp  stride.cpp
src/graph/node/: data_type.cpp  op_node.cpp  shape_util.cpp  tensor_node.cpp
src/graph/shape_infer/: broadcast_shape_infer.cpp  conv_shape_infer.cpp  gemm_shape_infer.cpp  identity_shape_infer.cpp  reduce_shape_infer.cpp  shape_infer_util.cpp  stride.cpp
src/kernel/: kernel_util.cpp
src/kernel/kernel_creator/: batch_norm_creator.cpp  element_wise_kernel_creator.cpp
src/kernel/kernel_key_generator/: batch_norm_key_generator.cpp  clip_key_generator.cpp  conv_key_generator.cpp  element_wise_kernel_key_generator.cpp  elementwise_key_generator.cpp  gemm_key_generator.cpp  kernel_key_util.cpp  reduce_key_generator.cpp
src/kernel/kernel_registry/: batch_norm_registry.cpp  clip_kernel_registry.cpp  con2D_kernel_registry.cpp  elementwise_kernel_registry.cpp  gemm_kernel_registry.cpp  reduce_kernel_registry.cpp
src/memory/: memory_planning.cpp
src/memory/memory_allocator/: cpu_memory_allocator.cpp  memory_allocator_util.cpp
src/optimize/: common_subexpression_elimination.cpp  constant_folding.cpp  conv_layout_optimizer.cpp  dead_code_elimination.cpp  op_fusion.cpp  optimizer_util.cpp
src/optimize/constant_folder/: element_wise_folder.cpp  elementwise_folder.cpp  op_folder_util.cpp
src/optimize/op_fusion/: conv_batchnorm_fuser.cpp  op_fusion_pattern.cpp
src/util/: onnx_util.cpp  util.cpp
test/MobileNet-v2/: CMakeLists.txt  main.cpp
test/optimize/: CMakeLists.txt  main.cpp
(+28 files in other folders)
